From release 0.0.0.0:
 - CHANGES file added.
 - lake_becomes_sea initialisation changed from 5 to 0.05 (so displays "5" on controls instead of "100").
 - Remove .qmake.internal.cache from CVS control (don't you just HATE it when that happens)
 - Move hardwired colours into ParametersTerrain class (in anticipation of control from GUI).
 - Add colour picking to GUI.
 - Bump version number to 0.0.1 (appears only in control_about.cpp)

 
