@@ -1,5 +1,7 @@
+- Add control over heights at which colours switch.
 - Figure out how to build RPMs.
 - Add "flight simulator" mode for getting in closer to terrain.
 - Add colour-choosers for picking terrain colours.
 - Add Unix "man" page.
 - Improve code documentation.
+- Move terrain computation and save into separate threads so interface isn't locked.
